--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -24,7 +24,7 @@
     </div>
     <div class="masthead__your"></div>
     <div class="masthead__lorem"></div>
-    <button class="masthead__button">
+    <button type="json" class="masthead__button">
       <a>FIND OUT MORE</a>
     </button>
   </div>
